--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "wechat-enterprise",
-  "version": "0.1.1",
+  "name": "skyline-wechat-enterprise",
+  "version": "0.1.1-fix.1",
   "description": "微信公共平台企业号版本Node库",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/node-webot/wechat-enterprise.git"
+    "url": "git://github.com/jchbh-duplicate/wechat-enterprise.git"
   },
   "keywords": [
     "weixin",
@@ -19,7 +19,7 @@
     "xml2js": "0.4.4",
     "ejs": ">=1.0.0",
     "wechat-crypto": "0.0.2",
-    "wechat-enterprise-api": "*"
+    "skyline-wechat-enterprise-api": "*"
   },
   "devDependencies": {
     "supertest": "*",
